clean code to clean POC-psql